--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           return radius(+d.Total);
         })
         .style('fill', d => {
-          return color(d.Industry_Type);
+          return color(d.Type);
         })
         //.attr('r', 2) // define the radius
         .attr('class', 'facility'); // give each circle a class name
