--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="container-fluid">
     <header class="row py-3 bg-dark text-white">
       <div class="col mx-2">
-        <h1 class="h1">Industrial Pollution</h1>
+        <h1 class="h1">The Golden Hour</h1>
       </div>
     </header>
 
